2010-11-25  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (try_restoring_backup): Display error message when
	it's not possible to copy backup file.

2010-10-12  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (try_restoring_backup): do the interaction with the
	user for backup restoring outside of the read_data function.

2010-05-05  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (choose_backup_file): Added function to choose one of
	the backups to load.
	(read_data): Offer the user a chance to load a previous backup
	when reading the data file fails.

2010-01-04  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c: Added missing include of math.h for functions
	lround and round.

2009-11-24  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/proj.c (gtt_project_get_secs_current): return the time for
	the currently selected diary entry instead of the head of the task
	list.

2009-11-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c (status_icon_popup_menu): Change the hide
	window menu text.

	* src/log.c (printf_project): Added option to log the current
	diary entry (Patch #1984744). Thanks Matt Simmons for the patch.

2009-11-19  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Fix LIBGNOMEUI related variable substitution. Make
	it buildable with recent versions of libgnomeui.

2009-11-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c, src/menucmd.c: Add ability to hide main
	window by right clicking the status icon. Thanks Kip Warner for
	the patch.

2009-09-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_visible_columns):
	Check that the column_references tree is not NULL before calling
	g_tree_destroy.

2009-09-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_expander_state):
	return without any further processing if states is NULL.
